IntelliJ making the Interpreter so much more readable and stuff